--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"discord.js": "^14.16.3",
-		"dotenv": "^16.4.7"
+		"dotenv": "^16.4.7",
+		"ms": "^2.1.3"
 	}
 }
