--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 	"author": "Sanketh Bennur",
 	"license": "ISC",
 	"dependencies": {
+		"canvacord": "^6.0.2",
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.4.7",
+		"mongoose": "^8.9.3",
 		"ms": "^2.1.3"
 	}
 }
