--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.4.7",
 		"mongoose": "^8.9.3",
-		"ms": "^2.1.3"
+		"ms": "^2.1.3",
+		"openai": "^4.77.3"
 	}
 }
